changed the My Account tab in the navbar to open into two options, submit event and profile; adjusted the events display template for the categories page tohave proper spacing and format (should be tested with more events than one to make sure layout is dynamic but its too late at night for that now)

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,3 +37,12 @@ html {
 .bookmarks-page-button{
   font-size: 30pt;
 }
+
+.truncate {
+  overflow: hidden;
+  text-overflow:ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+          line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
